fix nav flicker when popup opens

--- a/app/assets/stylesheets/timeline/_overlay.scss
+++ b/app/assets/stylesheets/timeline/_overlay.scss
@@ -107,20 +107,6 @@
     margin-top: 10px;
     padding-top: 10px;
   }
-
-  .markdown{
-    p{
-      color: $white;
-    }
-
-    li{
-      color: $white;
-
-      &:before{
-        background-color: $dark-blue;
-      }
-    }
-  }
 }
 
 
@@ -147,7 +133,8 @@
 		visibility: visible;
 		@include transform(translateY(0%));
 		@include transition(transform 0.5s $ease-out-expo);
-		#popup{
+
+    #popup{
 			opacity: 1;
 			top: 5%;
 			@include transition(all 0.5s $ease-out-quart 0.1s);
